5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1758_1576.log
== TEST (2019-05-23 10:42:23) 
-- CODE:
v1= array(eval(input("qual seu vetor 1? ")))
v2= array(eval(input("qual seu vetor 2? ")))

i=0
e=0
b=0

while (i<size(v1) and size(v2)):
	if(v1==11 and v2==22):
		b= b+1
	elif(v1==22 and v2==11):
		e=e+1
	elif(v1==11 and v2==33):
		e=e+1
	elif(v1==33 and v2==11):
		b=b+1
	elif(v1==22 and v2==33):
		b= b+1
	elif(v1==33 and v2==22):
		e=e+1
	i= i+1
if(b>e):
	print(i)
	print("EUSAPIA")
	
elif(b<e):
	print(i)
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1= array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:42:35) 
-- CODE:
from numpy import*
v1= array(eval(input("qual seu vetor 1? ")))
v2= array(eval(input("qual seu vetor 2? ")))

i=0
e=0
b=0

while (i<size(v1) and size(v2)):
	if(v1==11 and v2==22):
		b= b+1
	elif(v1==22 and v2==11):
		e=e+1
	elif(v1==11 and v2==33):
		e=e+1
	elif(v1==33 and v2==11):
		b=b+1
	elif(v1==22 and v2==33):
		b= b+1
	elif(v1==33 and v2==22):
		e=e+1
	i= i+1
if(b>e):
	print(i)
	print("EUSAPIA")
	
elif(b<e):
	print(i)
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:46:18) 
-- CODE:
from numpy import*
v1= array(eval(input("qual seu vetor 1? ")))
v2= array(eval(input("qual seu vetor 2? ")))

i=0
e=0
b=0

while (i<size(v1) and size(v2)):
	if(v1[i]==11 and v2[i]==22):
		b= b+1
	elif(v1[i]==22 and v2[i]==11):
		e=e+1
	elif(v1[i]==11 and v2[i]==33):
		e=e+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==22 and v2[i]==33):
		b= b+1
	elif(v1[i]==33 and v2[i]==22):
		e=e+1
	i= i+1
if(b>e):
	print(i)
	print("EUSAPIA")
	
elif(b<e):
	print(i)
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:46:26) 
-- CODE:
from numpy import*
v1= array(eval(input("qual seu vetor 1? ")))
v2= array(eval(input("qual seu vetor 2? ")))

i=0
e=0
b=0

while (i<size(v1) and size(v2)):
	if(v1[i]==11 and v2[i]==22):
		b= b+1
	elif(v1[i]==22 and v2[i]==11):
		e=e+1
	elif(v1[i]==11 and v2[i]==33):
		e=e+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==22 and v2[i]==33):
		b= b+1
	elif(v1[i]==33 and v2[i]==22):
		e=e+1
	i= i+1
if(b>e):
	print(i)
	print("EUSAPIA")
	
elif(b<e):
	print(i)
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:46:36) 
-- CODE:
from numpy import*
v1= array(eval(input("qual seu vetor 1? ")))
v2= array(eval(input("qual seu vetor 2? ")))

i=0
e=0
b=0

while (i<size(v1) and size(v2)):
	if(v1[i]==11 and v2[i]==22):
		b= b+1
	elif(v1[i]==22 and v2[i]==11):
		e=e+1
	elif(v1[i]==11 and v2[i]==33):
		e=e+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==22 and v2[i]==33):
		b= b+1
	elif(v1[i]==33 and v2[i]==22):
		e=e+1
	i= i+1
if(b>e):
	print(i)
	print("EUSAPIA")
	
elif(b<e):
	print(i)
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- EXECUTION TIME:
0.400475
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:46:50) 
-- CODE:
from numpy import*
v1= array(eval(input("qual seu vetor 1? ")))
v2= array(eval(input("qual seu vetor 2? ")))

i=0
e=0
b=0

while (i<size(v1) and size(v2)):
	if(v1[i]==11 and v2[i]==22):
		b= b+1
	elif(v1[i]==22 and v2[i]==11):
		e=e+1
	elif(v1[i]==11 and v2[i]==33):
		e=e+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==22 and v2[i]==33):
		b= b+1
	elif(v1[i]==33 and v2[i]==22):
		e=e+1
	i= i+1
if(b>e):
	print(i)
	print("EUSAPIA")
	
elif(b<e):
	print(i)
	print("BARSANULFO")
else:
	print(i)
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:46:58) 
-- CODE:
from numpy import*
v1= array(eval(input("qual seu vetor 1? ")))
v2= array(eval(input("qual seu vetor 2? ")))

i=0
e=0
b=0

while (i<size(v1) and size(v2)):
	if(v1[i]==11 and v2[i]==22):
		b= b+1
	elif(v1[i]==22 and v2[i]==11):
		e=e+1
	elif(v1[i]==11 and v2[i]==33):
		e=e+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==22 and v2[i]==33):
		b= b+1
	elif(v1[i]==33 and v2[i]==22):
		e=e+1
	i= i+1
if(b>e):
	print(i)
	print("EUSAPIA")
	
elif(b<e):
	print(i)
	print("BARSANULFO")
else:
	print(i)
	print("EMPATE")
	
-- EXECUTION TIME:
0.351618
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:47:50) 
-- CODE:
from numpy import*
v1= array(eval(input("qual seu vetor 1? ")))
v2= array(eval(input("qual seu vetor 2? ")))

i=0
e=0
b=0

while (i<size(v1) and size(v2)):
	if(v1[i]==11 and v2[i]==22):
		b= b+1
	elif(v1[i]==22 and v2[i]==11):
		e=e+1
	elif(v1[i]==11 and v2[i]==33):
		e=e+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==22 and v2[i]==33):
		b= b+1
	elif(v1[i]==33 and v2[i]==22):
		e=e+1
	i= i+1
if(b>e):
	print(i)
	print("EUSAPIA")
	
elif(b<e):
	print(i)
	print("BARSANULFO")
else:
	print(i)
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:48:05) 
-- CODE:
from numpy import*
v1= array(eval(input("qual seu vetor 1? ")))
v2= array(eval(input("qual seu vetor 2? ")))

i=0
e=0
b=0

while (i<size(v1) and size(v2)):
	if(v1[i]==11 and v2[i]==22):
		b= b+1
	elif(v1[i]==22 and v2[i]==11):
		e=e+1
	elif(v1[i]==11 and v2[i]==33):
		e=e+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==22 and v2[i]==33):
		b= b+1
	elif(v1[i]==33 and v2[i]==22):
		e=e+1
	i= i+1
if(b>e):
	print(i)
	print("EUSAPIA")
	
elif(b<e):
	print(i)
	print("BARSANULFO")
else:
	print(i)
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:48:33) 
-- CODE:
from numpy import*
v1= array(eval(input("qual seu vetor 1? ")))
v2= array(eval(input("qual seu vetor 2? ")))

i=0
e=0
b=0

while (i<size(v1) and size(v2)):
	if(v1[i]==11 and v2[i]==22):
		b= b+1
	elif(v1[i]==22 and v2[i]==11):
		e=e+1
	elif(v1[i]==11 and v2[i]==33):
		e=e+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==22 and v2[i]==33):
		b= b+1
	elif(v1[i]==33 and v2[i]==22):
		e=e+1
	i= i+1
if(b>e):
	print(i)
	print("EUSAPIA")
	
elif(b<e):
	print(i)
	print("BARSANULFO")
else:
	print(i)
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:49:03) 
-- CODE:
from numpy import*
v1= array(eval(input("qual seu vetor 1? ")))
v2= array(eval(input("qual seu vetor 2? ")))

i=0
e=0
b=0

while (i<size(v1) and size(v2)):
	if(v1[i]==11 and v2[i]==22):
		b= b+1
	elif(v1[i]==22 and v2[i]==11):
		e=e+1
	elif(v1[i]==11 and v2[i]==33):
		e=e+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==22 and v2[i]==33):
		b= b+1
	elif(v1[i]==33 and v2[i]==22):
		e=e+1
	i= i+1
if(b>e):
	print(i)
	print("BARSANULFO")
	
elif(b<e):
	print(i)
	print("EUSAPIA")
else:
	print(i)
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:49:06) 
-- CODE:
from numpy import*
v1= array(eval(input("qual seu vetor 1? ")))
v2= array(eval(input("qual seu vetor 2? ")))

i=0
e=0
b=0

while (i<size(v1) and size(v2)):
	if(v1[i]==11 and v2[i]==22):
		b= b+1
	elif(v1[i]==22 and v2[i]==11):
		e=e+1
	elif(v1[i]==11 and v2[i]==33):
		e=e+1
	elif(v1[i]==33 and v2[i]==11):
		b=b+1
	elif(v1[i]==22 and v2[i]==33):
		b= b+1
	elif(v1[i]==33 and v2[i]==22):
		e=e+1
	i= i+1
if(b>e):
	print(i)
	print("BARSANULFO")
	
elif(b<e):
	print(i)
	print("EUSAPIA")
else:
	print(i)
	print("EMPATE")
	
-- EXECUTION TIME:
0.373754
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
